# mcp-memory-service

./: .commit-message  .coveragerc  .env.example  .env.sqlite.backup  .gitignore  .mlc-config.json  AGENTS.md  AUTH_FLOW_DIAGRAM.md  CHANGELOG-HISTORIC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSOLIDATION_SETUP.md  CONSOLIDATION_TEST_RESULTS.md  CONTRIBUTING.md  GITHUB_ISSUE_DRAFT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_v8.5.3.md  PHASE_2A_COMPLETION_REPORT.md  PHASE_2B_SESSION_SUMMARY.md  PR_DESCRIPTION.md  README.md  REFACTORING_PHASE_2A_INDEX.md  ROADMAP.md  SECURITY.md  SPONSORS.md  TESTING_NOTES.md  TEST_VALIDATION_REPORT.md  ai-optimized-tool-descriptions.py  install.py  pyproject-lite.toml  pyproject.toml  pytest.ini  release-notes-v8.61.0.md  selective_timestamp_recovery.py  start_http_server.sh  sync_now.py  test_auth_implementation.md  test_document.txt  test_fixes.py  (+2 more)
.claude/: consolidation-fix-handoff.md  consolidation-hang-fix-summary.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: amp-automation.md  amp-bridge.md  amp-pr-automator.md  changelog-archival.md  code-quality-guard.md  gemini-pr-automator.md  github-release-manager.md
.claude/commands/: README.md  refactor-function  refactor-function-prod  refactor-function.md  release.md  triage.md
.claude/directives/: README.md  agents.md  code-quality-workflow.md  consolidation-details.md  development-setup.md  hooks-configuration.md  memory-first.md  memory-tagging.md  pr-workflow.md  quality-system-details.md  refactoring-checklist.md  release-cadence.md  storage-backends.md  version-management.md
.claude/prompts/: hybrid-cleanup-integration.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.github/codeql/: codeql-config.yml
.github/workflows/: CODEQL.md  bridge-tests.yml  changelog-housekeeping.yml  claude-branch-automation.yml  claude-code-review.yml  claude.yml  codeql.yml  deploy-herenow.yml  dev-setup-validation.yml  discussion-triage.yml  docker-publish.yml  dockerfile-lint.yml  docs-check.yml  main.yml  publish-and-test.yml  publish-dual.yml  publish-placeholders.yml  release.yml  roadmap-review-reminder.yml
.metrics/: BASELINE_REPORT.md  COMPLEXITY_COMPARISON.txt  QUICK_REFERENCE.txt  README.md  REFACTORED_BASELINE.md  REFACTORING_COMPLETION_REPORT.md  TRACKING_TABLE.md  baseline_cc_install_hooks.txt  baseline_mi_install_hooks.txt  baseline_nesting_install_hooks.txt
.pyscn/: .gitignore
.pyscn/reports/: analyze_20251123_214224.html
archive/docs-root-cleanup-2026-04-02/: FIXES_COMPLETE.md  TEST_ADDITIONS_SUMMARY.md
archive/investigations/: MACOS_HOOKS_INVESTIGATION.md
archive/release-notes/: release-notes-v7.1.4.md
claude-hooks/: .mcp.json  CONFIGURATION.md  PLUGIN.md  README-AUTO-CAPTURE.md  README-NATURAL-TRIGGERS.md  README-PERMISSION-REQUEST.md  README-SESSION-HARVEST.md  README.md  WINDOWS-SESSIONSTART-BUG.md  config.json  config.template.json  install_hooks.py  statusline.sh  test-adaptive-weights.js  test-recency-scoring.js
claude-hooks/.claude-plugin/: hooks.json  plugin.json
claude-hooks/core/: auto-capture-hook.js  auto-capture-hook.ps1  permission-request.js  session-end-harvest.js  session-end.js  session-start.js
claude-hooks/scripts/: ensure-server.js  test-plugin-install.sh  validate-plugin-schema.js
claude-hooks/tests/: ensure-server.test.js  integration-test.js  memory-client-store.test.js  session-end-harvest.test.js  test-code-execution.js  test-cross-session.json  test-permission-request.js  test-session-tracking.json  test-threading.json  validate-plugin-schema.test.js
claude_commands/: README.md  memory-ingest-dir.md  memory-ingest.md  session-start.md
deployment/: mcp-memory.service
docs/: BENCHMARKS.md  CLAUDE_CODE_QUICK_REFERENCE.md  LIGHTWEIGHT_ONNX_SETUP.md  MIGRATION.md  README.md  ROADMAP.md  amp-cli-bridge.md  architecture.md  cloudflare-setup.md  docker-optimized-build.md  document-ingestion.md  first-time-setup.md  glama-deployment.md  http-server-management.md  hybrid-graph-sync-plan.md  ide-compatability.md  index.html  memory-ontology.md  milvus-backend.md  oauth-setup.md  oauth-storage-backends.md  pr-graphql-integration.md  remote-mcp-setup.md  setup-guide.md  sqlite-vec-backend.md  testing-cloudflare-backend.md  wiki-Graph-Database-Architecture.md  wiki-documentation-plan.md
examples/: claude_desktop_config_template.json  claude_desktop_config_windows.json  http-mcp-bridge.js
instincts/: learned.instincts.yaml
opencode/: README.md  memory-plugin.config.example.json  memory-plugin.js
scripts/: README.md  setup-lightweight.sh  update_and_restart.sh  validate_tool_optimization.py
tests/: README.md  conftest.py  test_batch_inference.py  test_config.py  test_content_splitting.py  test_database.py  test_deberta_quality.py  test_embedding_dimension_cache.py  test_external_embeddings.py  test_fallback_quality.py  test_graph_relationship_types.py  test_graph_service.py  test_graph_storage_integration.py  test_graph_traversal.py  test_health_check_factory.py  test_hybrid_cloudflare_limits.py  test_hybrid_storage.py  test_integration_tools.py  test_integration_tools.py.disabled  test_integrity_monitor.py  test_issue_396.py  test_issues_603_to_608.py  test_lightweight_onnx.py  test_memory_ontology_integration.py  test_memory_ops.py  test_memory_wrapper_cleanup.py  test_milvus_graph.py  test_ontology.py  test_openai_compat_quality.py  test_quality_integration.py  test_quality_system.py  test_response_limiter.py  test_semantic_reasoner.py  test_semantic_search.py  test_sqlite_vec_storage.py  test_tag_optimization_performance.py  test_tag_taxonomy.py  test_time_parser.py  test_timestamp_preservation.py  test_unified_tools.py
tools/pypi-placeholders/agent-memory-service/: README.md  pyproject.toml
tools/pypi-placeholders/agent-memory-service/src/agent_memory_service/: __init__.py
video/: .gitignore  README.md  package.json  remotion.config.ts  tsconfig.json
(+600 files in other folders)
